force-app/main/default/objects/Team_Allocation_Template_Item__c/Team_Allocation_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Team Allocation Template Item</label>
    <nameField>
        <label>Team Allocation Template Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Allocation Template Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>