force-app/main/default/objects/Team_Allocation_Template_Item__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <label>count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>