force-app/main/default/objects/Team_Allocation_Template_Item__c/fields/Involvement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Percent__c</fullName>
    <label>Involvement Percent</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>