force-app/main/default/objects/Team_Allocation_Template_Item__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Candidate_Level</valueSetName>
    </valueSet>
</CustomField>