force-app/main/default/objects/Team_Allocation_Template_Item__c/fields/Team_Allocation_Template__c.field-meta.xml
<CustomField>
    <fullName>Team_Allocation_Template__c</fullName>
    <label>Team Allocation Template</label>
    <referenceTo>Scrum_Team_Template__c</referenceTo>
    <relationshipLabel>Team Allocation Template Items</relationshipLabel>
    <relationshipName>Team_Allocation_Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>